[gd_scene load_steps=14 format=1]

[ext_resource path="res://menu/menu.gd" type="Script" id=1]
[ext_resource path="res://backgrounds/menu_bg_pause.png" type="Texture" id=2]
[ext_resource path="res://fonts/sector_034.fnt" type="BitmapFont" id=3]
[ext_resource path="res://fonts/radio_stars_font.fnt" type="BitmapFont" id=4]
[ext_resource path="res://menu/camera2d.gd" type="Script" id=5]
[ext_resource path="res://backgrounds/stars_bg.png" type="Texture" id=6]
[ext_resource path="res://backgrounds/asteroids_bg.tex" type="Texture" id=7]
[ext_resource path="res://backgrounds/asteroids_bg2.tex" type="Texture" id=8]
[ext_resource path="res://fonts/small_radio_stars_font.fnt" type="BitmapFont" id=9]
[ext_resource path="res://menu/highscores.tscn" type="PackedScene" id=10]
[ext_resource path="res://fonts/scores_radio_stars_font.fnt" type="BitmapFont" id=11]
[ext_resource path="res://sfx/sfx_laser1.smp" type="Sample" id=12]

[sub_resource type="SampleLibrary" id=1]

samples/sfx_laser1 = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 12 )
}

[node name="menu" type="CanvasLayer" groups=[
"menu",
]]

process/pause_mode = 2
layer = 7
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
script/script = ExtResource( 1 )

[node name="PauseBG" type="Sprite" parent="."]

visibility/light_mask = 0
texture = ExtResource( 2 )
centered = false
modulate = Color( 1, 1, 1, 0.508196 )
region = true
region_rect = Rect2( 0, 0, 1280, 720 )
__meta__ = {
"_edit_lock_": true
}

[node name="StartBG" type="Sprite" parent="."]

visibility/opacity = 0.7
visibility/light_mask = 0
texture = ExtResource( 2 )
centered = false
modulate = Color( 1, 1, 1, 0.508196 )
region = true
region_rect = Rect2( 0, 0, 1280, 720 )
__meta__ = {
"_edit_lock_": true
}

[node name="Title" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 421.0
margin/top = 63.0
margin/right = 881.0
margin/bottom = 173.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.65098, 0.270588, 0.0862745, 1 )
text = "WARP"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ver" type="Label" parent="Title"]

rect/scale = Vector2( 0.2, 0.2 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 459.0
margin/top = 8.0
margin/right = 649.0
margin/bottom = 118.0
custom_fonts/font = ExtResource( 3 )
text = "0.1"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Instructions" type="VBoxContainer" parent="."]

editor/display_folded = true
visibility/opacity = 0.8
rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 417.0
margin/top = 182.0
margin/right = 1331.0
margin/bottom = 322.0
alignment = 0

[node name="Line0" type="Label" parent="Instructions"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 914.0
margin/bottom = 44.0
custom_fonts/font = ExtResource( 4 )
text = "Use the arrow keys to move around"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Line1" type="Label" parent="Instructions"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 48.0
margin/right = 914.0
margin/bottom = 92.0
custom_fonts/font = ExtResource( 4 )
text = "press space or x to fire"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Line2" type="Label" parent="Instructions"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 96.0
margin/right = 914.0
margin/bottom = 140.0
custom_fonts/font = ExtResource( 4 )
text = "Press left ctrl or z to warp"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

editor/display_folded = true
layer = -1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
scroll/offset = Vector2( 0, 0 )
scroll/base_offset = Vector2( 0, 0 )
scroll/base_scale = Vector2( 1, 1 )
scroll/limit_begin = Vector2( 0, 0 )
scroll/limit_end = Vector2( 0, 0 )
scroll/ignore_camera_zoom = true

[node name="Camera2D" type="Camera2D" parent="ParallaxBackground"]

visibility/light_mask = 0
transform/pos = Vector2( 5, 0 )
anchor_mode = 0
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit/left = -10000000
limit/top = -10000000
limit/right = 10000000
limit/bottom = 10000000
drag_margin/h_enabled = true
drag_margin/v_enabled = true
smoothing/enable = false
smoothing/speed = 5.0
drag_margin/left = 0.2
drag_margin/top = 0.2
drag_margin/right = 0.2
drag_margin/bottom = 0.2
script/script = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="Background1" type="ParallaxLayer" parent="ParallaxBackground"]

editor/display_folded = true
visibility/light_mask = 0
motion/scale = Vector2( 0.5, 0 )
motion/offset = Vector2( 1, 0 )
motion/mirroring = Vector2( 1280, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="ParallaxBackground/Background1"]

visibility/light_mask = 0
texture = ExtResource( 6 )
centered = false
region = true
region_rect = Rect2( 0, 0, 1280, 720 )
__meta__ = {
"_edit_lock_": true
}

[node name="Background2" type="ParallaxLayer" parent="ParallaxBackground"]

editor/display_folded = true
visibility/light_mask = 0
motion/scale = Vector2( 2, 1 )
motion/offset = Vector2( 0, 0 )
motion/mirroring = Vector2( 1280, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="ParallaxBackground/Background2"]

visibility/opacity = 0.47
visibility/light_mask = 0
texture = ExtResource( 7 )
centered = false
region = true
region_rect = Rect2( 0, 0, 1280, 720 )
__meta__ = {
"_edit_lock_": true
}

[node name="Background3" type="ParallaxLayer" parent="ParallaxBackground"]

editor/display_folded = true
visibility/light_mask = 0
motion/scale = Vector2( 3, 1 )
motion/offset = Vector2( 0, 0 )
motion/mirroring = Vector2( 1280, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="ParallaxBackground/Background3"]

visibility/opacity = 0.47
visibility/light_mask = 0
texture = ExtResource( 8 )
centered = false
region = true
region_rect = Rect2( 0, 0, 1280, 720 )
__meta__ = {
"_edit_lock_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]

editor/display_folded = true
visibility/light_mask = 0
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 471.0
margin/top = 216.0
margin/right = 823.0
margin/bottom = 556.0
alignment = 0

[node name="Context" type="Label" parent="VBoxContainer"]

visibility/light_mask = 0
rect/min_size = Vector2( 0, 40 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 352.0
margin/bottom = 44.0
custom_fonts/font = ExtResource( 4 )
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="sep" type="Label" parent="VBoxContainer"]

visibility/light_mask = 0
rect/min_size = Vector2( 0, 10 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 48.0
margin/right = 352.0
margin/bottom = 62.0
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="StartButton" type="Button" parent="VBoxContainer" groups=[
"menu_button",
]]

visibility/light_mask = 0
rect/min_size = Vector2( 0, 40 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 66.0
margin/right = 352.0
margin/bottom = 106.0
custom_fonts/font = ExtResource( 9 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "start"
flat = false
__meta__ = {
"_edit_lock_": true
}

[node name="RestartButton" type="Button" parent="VBoxContainer" groups=[
"menu_button",
]]

visibility/visible = false
visibility/light_mask = 0
rect/min_size = Vector2( 0, 40 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 110.0
margin/right = 352.0
margin/bottom = 150.0
custom_fonts/font = ExtResource( 9 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Restart"
flat = false

[node name="OptionsButton" type="Button" parent="VBoxContainer" groups=[
"menu_button",
]]

visibility/light_mask = 0
rect/min_size = Vector2( 0, 40 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 110.0
margin/right = 352.0
margin/bottom = 150.0
custom_fonts/font = ExtResource( 9 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Options"
flat = false
__meta__ = {
"_edit_lock_": true
}

[node name="OptionsFullScreenButton" type="Button" parent="VBoxContainer"]

visibility/visible = false
visibility/light_mask = 0
rect/min_size = Vector2( 0, 40 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 154.0
margin/right = 352.0
margin/bottom = 194.0
custom_fonts/font = ExtResource( 9 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Go Full Screen"
flat = false

[node name="OptionsMusicButton" type="Button" parent="VBoxContainer"]

visibility/visible = false
visibility/light_mask = 0
rect/min_size = Vector2( 0, 40 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 154.0
margin/right = 352.0
margin/bottom = 194.0
custom_fonts/font = ExtResource( 9 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Music Volume"
flat = false

[node name="OptionsSfxButton" type="Button" parent="VBoxContainer"]

visibility/visible = false
visibility/light_mask = 0
rect/min_size = Vector2( 0, 40 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 198.0
margin/right = 352.0
margin/bottom = 238.0
custom_fonts/font = ExtResource( 9 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Sfx Volume"
flat = false

[node name="OptionsReturnButton" type="Button" parent="VBoxContainer"]

visibility/visible = false
visibility/light_mask = 0
rect/min_size = Vector2( 0, 40 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 154.0
margin/right = 352.0
margin/bottom = 194.0
custom_fonts/font = ExtResource( 9 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Return To Menu"
flat = false

[node name="CreditsButton" type="Button" parent="VBoxContainer" groups=[
"menu_button",
]]

visibility/light_mask = 0
rect/min_size = Vector2( 0, 40 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 154.0
margin/right = 352.0
margin/bottom = 194.0
custom_fonts/font = ExtResource( 9 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Credits"
flat = false

[node name="QuitButton" type="Button" parent="VBoxContainer" groups=[
"menu_button",
]]

visibility/light_mask = 0
rect/min_size = Vector2( 0, 40 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 198.0
margin/right = 352.0
margin/bottom = 238.0
custom_fonts/font = ExtResource( 9 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Quit"
flat = false

[node name="Highscores" parent="VBoxContainer" instance=ExtResource( 10 )]

rect/min_size = Vector2( 352, 0 )
margin/top = 242.0
margin/bottom = 242.0

[node name="NameDialog" type="AcceptDialog" parent="."]

visibility/visible = false
visibility/light_mask = 0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 203.0
margin/top = 287.0
margin/right = 1058.0
margin/bottom = 544.0
popup/exclusive = true
window/title = ""
dialog/hide_on_ok = true

[node name="Title" type="Label" parent="NameDialog"]

rect/scale = Vector2( 0.45, 0.45 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = -22.0
margin/right = 1899.0
margin/bottom = 24.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "High score "
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Line0" type="Label" parent="NameDialog"]

rect/scale = Vector2( 0.45, 0.45 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 26.0
margin/right = 1901.0
margin/bottom = 72.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Congratulations! you've reach a new high score!"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="FinalScore" type="Label" parent="NameDialog"]

rect/scale = Vector2( 0.45, 0.45 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 55.0
margin/right = 1901.0
margin/bottom = 101.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Final Score:"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Line1" type="Label" parent="NameDialog"]

rect/scale = Vector2( 0.45, 0.45 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 119.0
margin/right = 1901.0
margin/bottom = 165.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Enter your name:"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="LineEdit" type="LineEdit" parent="NameDialog"]

visibility/light_mask = 0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 327.0
margin/top = 157.0
margin/right = 526.0
margin/bottom = 190.0
custom_fonts/font = ExtResource( 11 )
placeholder/alpha = 0.6
align = 1
max_length = 8
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="CreditsDialog" type="AcceptDialog" parent="."]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 395.0
margin/top = 303.0
margin/right = 903.0
margin/bottom = 469.0
popup/exclusive = false
window/title = ""
dialog/hide_on_ok = true

[node name="Title" type="Label" parent="CreditsDialog"]

rect/scale = Vector2( 0.45, 0.45 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = -22.0
margin/right = 1127.0
margin/bottom = 24.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Credits"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Line0" type="Label" parent="CreditsDialog"]

rect/scale = Vector2( 0.45, 0.45 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 7.0
margin/right = 1127.0
margin/bottom = 53.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Developed by"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Line1" type="Label" parent="CreditsDialog"]

rect/scale = Vector2( 0.45, 0.45 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 28.0
margin/right = 1127.0
margin/bottom = 74.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Lior David"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Line2" type="Label" parent="CreditsDialog"]

rect/scale = Vector2( 0.45, 0.45 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 49.0
margin/right = 1127.0
margin/bottom = 95.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "And"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ProjectLink" type="LinkButton" parent="CreditsDialog/Line2"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 986.0
margin/top = 11.0
margin/right = 1068.0
margin/bottom = 39.0
custom_fonts/font = ExtResource( 9 )
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
text = "Link"

[node name="Line3" type="Label" parent="CreditsDialog"]

rect/scale = Vector2( 0.45, 0.45 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 70.0
margin/right = 1127.0
margin/bottom = 116.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Idan Gal"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Line4" type="Label" parent="CreditsDialog"]

rect/scale = Vector2( 0.45, 0.45 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 91.0
margin/right = 1127.0
margin/bottom = 137.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Art: Kenney (c)"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="KenneyLink" type="LinkButton" parent="CreditsDialog/Line4"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 986.0
margin/top = 11.0
margin/right = 1068.0
margin/bottom = 39.0
custom_fonts/font = ExtResource( 9 )
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
text = "Link"

[node name="Line5" type="Label" parent="CreditsDialog"]

rect/scale = Vector2( 0.45, 0.45 )
hint/tooltip = "test tool tip"
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 111.0
margin/right = 1127.0
margin/bottom = 157.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Music: Wired by cdk (c) CC-BY-NC"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="MusicLink" type="LinkButton" parent="CreditsDialog/Line5"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 986.0
margin/top = 11.0
margin/right = 1068.0
margin/bottom = 39.0
custom_fonts/font = ExtResource( 9 )
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
text = "Link"

[node name="SamplePlayer" type="SamplePlayer" parent="."]

config/polyphony = 1
config/samples = SubResource( 1 )
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_Start_Button_pressed"]

[connection signal="pressed" from="VBoxContainer/RestartButton" to="." method="_on_RestartButton_pressed"]

[connection signal="pressed" from="VBoxContainer/OptionsButton" to="." method="_on_OptionsButton_pressed"]

[connection signal="pressed" from="VBoxContainer/OptionsFullScreenButton" to="." method="_on_OptionsFullScreenButton_pressed"]

[connection signal="pressed" from="VBoxContainer/OptionsMusicButton" to="." method="_on_OptionsMusicButton_pressed"]

[connection signal="pressed" from="VBoxContainer/OptionsSfxButton" to="." method="_on_OptionsSfxButton_pressed"]

[connection signal="pressed" from="VBoxContainer/OptionsReturnButton" to="." method="_on_OptionsReturnButton_pressed"]

[connection signal="pressed" from="VBoxContainer/CreditsButton" to="." method="_on_CreditsButton_pressed"]

[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]

[connection signal="confirmed" from="NameDialog" to="." method="_on_NameDialog_confirmed"]

[connection signal="confirmed" from="CreditsDialog" to="." method="_on_CreditsDialog_confirmed"]

[connection signal="pressed" from="CreditsDialog/Line2/ProjectLink" to="." method="_on_ProjectLink_pressed"]

[connection signal="pressed" from="CreditsDialog/Line4/KenneyLink" to="." method="_on_KenneyLink_pressed"]

[connection signal="pressed" from="CreditsDialog/Line5/MusicLink" to="." method="_on_MusicLink_pressed"]


